[package]
name = "blueenginetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blue_engine = { git = "https://github.com/AryanpurTech/BlueEngine" }
blue_engine_utilities = {git = "https://github.com/AryanpurTech/BlueEngineUtilities.git"}
nscript = { git = "https://github.com/NickJasonHagen/nscript" }

